# BoneBox

./: 20230706_GenerateBoneVolume_SHI.ipynb  GenerateBoneVolume_Batch_Final.ipynb  README.md  environment_bonebox.yml  pyproject.toml  render_html_documentation.sh
Metrics/: TBS.py
data/: isodata_04216_roi_4.nrrd  isodata_04216_roi_4_0.nrrd  output.txt  roi_bvtv.npy  roi_delta_z.npy  roi_num_nodes.npy  roi_vm_90p.npy  roi_vm_mean.npy
examples/: 20220405_extract_segmentation_rois.py  20220809_fit_MTF_NPS  20220825_skeletonize.py  Extract_Rois.py  Extract_Rois_exclusion_map_batch.py  FEAEs.npy  FEA_Es.npy  FEA_bvtvs.npy  FEAbvtvs.npy  FeaturesBiomarker.py  _skipped.face  clear  cuSDF.py  demo_20220323.py  demo_20220405.py  demo_FEA_bar_simple.py  demo_FEA_bar_simple_evensimpler.py  demo_FEA_shellsBST.py  demo_FEA_shellsBST_simple.py  demo_LSI_sim.py  example_Voronoi_rods.py  example_Voronoi_rods_FEA.py  example_Voronoi_rods_FEA_2.py  example_Voronoi_rods_FEA_phantomx.py  example_Voronoi_rods_FEA_phantomx_radiomics.py  example_analysis_bone_rois.py  example_imageJ_analsis.py  example_match_glcm.py  example_match_glcm_20211103.py  example_match_glcm_oldsweepdata.py  example_roi_compute_tbs.py  example_rois_radiomics_vs_tbs.py  example_rois_radiomics_vs_tbs_20211103.py  example_rois_radiomics_vs_tbs_20211116.py  example_topop_tb.py  example_topop_tb_1_pruningonly.py  example_topop_tb_lazy.py  example_topop_tb_thickstart.py  example_topop_tb_v2.py  example_topop_tb_v2_Rxyz.py  (+79 more)
phantoms/: RandAddPlates_qli.m  RandAddPlates_qli_test_201908.m  RandAddPlates_qli_test_201908_2.m  (+12 more)
(+274 files in other folders)
